--- a/src/app/netguru-hangman.component.html
+++ b/src/app/netguru-hangman.component.html
@@ -1,4 +1,9 @@
 <div class="main">
+
+  <div class="toolbar">
+    <button (click)="newGame()">New Game</button>
+  </div>
+
   <div class="hangman-canvas">
 
     siema
