--- a/src/app/netguru-hangman.component.scss
+++ b/src/app/netguru-hangman.component.scss
@@ -1,23 +1,23 @@
-body {
-    width: 100%;
-    height: 100%;
-}
-
-netguru-hangman-app {
-    width: 100%;
-    height: 100%;
-}
-
 .main {
     background-color: #3B4163;
     width: 100%;
     height: 100%;
     
+    padding: 8px;
+    
+    .toolbar {
+        padding:8px;
+    }
+    
     .hangman-canvas {
         background-color: #F5F5F5;
-        border-radius:8px;
-        width: 66%;
-        height: 66%;
+        border-radius:4px;
+        width: 80%;
+        height: 80%;
         margin: 0 auto;
+        
+        padding: 20px;
     }
 }
+
+
