--- a/src/app/hangman/hangman.component.html
+++ b/src/app/hangman/hangman.component.html
@@ -1,3 +1,47 @@
-<p>
-  hangman works!
-</p>
+<div class="bar">
+  <img src="/assets/img/bar.png" />
+</div>
+
+<div class="head">
+  <img src="/assets/img/head.png" />
+</div>
+
+<div class="neck">
+  <img src="/assets/img/neck.png" />
+</div>
+
+<div class="left-hand">
+  <img src="/assets/img/left-hand.png" />
+</div>
+
+<div class="left-arm">
+  <img src="/assets/img/left-arm.png" />
+</div>
+
+<div class="corpus">
+  <img src="/assets/img/corpus.png" />
+</div>
+
+<div class="bar">
+  <img src="/assets/img/right-arm.png" />
+</div>
+
+<div class="bar">
+  <img src="/assets/img/right-hand.png" />
+</div>
+
+<div class="bar">
+  <img src="/assets/img/left-leg.png" />
+</div>
+
+<div class="bar">
+  <img src="/assets/img/left-foot.png" />
+</div>
+
+<div class="bar">
+  <img src="/assets/img/right-leg.png" />
+</div>
+
+<div class="bar">
+  <img src="/assets/img/right-foot.png" />
+</div>
