--- a/src/app/hangman/hangman.component.html
+++ b/src/app/hangman/hangman.component.html
@@ -1,47 +1,58 @@
-<div class="bar">
-  <img src="/assets/img/bar.png" />
-</div>
+<div class="hangman">
+  <div class="bar">
+    <img src="/assets/img/bar.png" />
+  </div>
 
-<div class="head">
-  <img src="/assets/img/head.png" />
-</div>
+  <div class="body-top">
+    <div class="neck" *ngIf="wrongGuesses > 1" >
+      <img src="/assets/img/neck.png" />
+    </div>
+    <div class="head" *ngIf="wrongGuesses > 0">
+      <img src="/assets/img/head.png" />
+    </div>
+  </div>
 
-<div class="neck">
-  <img src="/assets/img/neck.png" />
-</div>
+  <div class="body-middle">
+    <div class="left-hand" *ngIf="wrongGuesses > 6">
+      <img src="/assets/img/left-hand.png" />
+    </div>
 
-<div class="left-hand">
-  <img src="/assets/img/left-hand.png" />
-</div>
+    <div class="left-arm" *ngIf="wrongGuesses > 4">
+      <img src="/assets/img/left-arm.png" />
+    </div>
 
-<div class="left-arm">
-  <img src="/assets/img/left-arm.png" />
-</div>
+    <div class="corpus" *ngIf="wrongGuesses > 2">
+      <img src="/assets/img/corpus.png" />
+    </div>
 
-<div class="corpus">
-  <img src="/assets/img/corpus.png" />
-</div>
+    <div class="right-hand" *ngIf="wrongGuesses > 5">
+      <img src="/assets/img/right-hand.png" />
+    </div>
 
-<div class="bar">
-  <img src="/assets/img/right-arm.png" />
-</div>
+    <div class="right-arm" *ngIf="wrongGuesses > 3">
+      <img src="/assets/img/right-arm.png" />
+    </div>
 
-<div class="bar">
-  <img src="/assets/img/right-hand.png" />
-</div>
+  </div>
 
-<div class="bar">
-  <img src="/assets/img/left-leg.png" />
-</div>
+  <div class="body-bottom">
 
-<div class="bar">
-  <img src="/assets/img/left-foot.png" />
-</div>
+    <div class="left-foot" *ngIf="wrongGuesses > 10">
+      <img src="/assets/img/left-foot.png" />
+    </div>
 
-<div class="bar">
-  <img src="/assets/img/right-leg.png" />
-</div>
+    <div class="left-leg" *ngIf="wrongGuesses > 8">
+      <img src="/assets/img/left-leg.png" />
+    </div>
 
-<div class="bar">
-  <img src="/assets/img/right-foot.png" />
+    <div class="right-foot" *ngIf="wrongGuesses > 9">
+      <img src="/assets/img/right-foot.png" />
+    </div>
+
+    <div class="right-leg" *ngIf="wrongGuesses > 7">
+      <img src="/assets/img/right-leg.png" />
+    </div>
+
+  </div>
+  
 </div>
