--- a/src/app/missed-letters/missed-letters.component.html
+++ b/src/app/missed-letters/missed-letters.component.html
@@ -1,4 +1,4 @@
-<h3>You missed</h3>
+<h3 *ngIf="missedLetters">You missed</h3>
 
 <div class="missedLetters">
   <div class="missedLetter" *ngFor="let letter of missedLetters">
