--- a/src/app/missed-letters/missed-letters.component.scss
+++ b/src/app/missed-letters/missed-letters.component.scss
@@ -1,10 +1,9 @@
 h3 {
     text-transform: capitalize;
-    text-align: right;
-    margin-right: 15px;
 }
 
 .missedLetters {
+    height: 55px;
     
     .missedLetter {
         font-size: 45px;
@@ -12,7 +11,7 @@ h3 {
         padding:10px;
         margin: 5px;
         border-radius: 4px;
-        color: blue;
+        color: #4D69FA;
         text-transform: capitalize;        
     }
 }
