--- a/src/app/netguru-hangman.component.scss
+++ b/src/app/netguru-hangman.component.scss
@@ -5,29 +5,33 @@
 
 .main {
     font-family: AllerDisplay;
+    margin: 8px;
     
-    background-color: #3B4163;
-    width: 100%;
-    height: 100%;
-    padding: 8px;
-    
-    .toolbar {
-        padding:8px;
-    }
+    background-color: #F5F5F5;
+    border-radius:4px;
+    width: 80%;
+    height: 80%;
+    margin: 0 auto;
+    padding: 20px;
     
     .hangman-canvas {        
-        background-color: #F5F5F5;
-        border-radius:4px;
-        width: 80%;
-        height: 80%;
-        margin: 0 auto;
-        padding: 20px;
+        display:flex;
+        flex-direction:row;
+        
+        app-hangman {
+            flex: 0 0 50%;
+        }
+        
+        app-missed-letters {
+            flex: 0 0 50%;
+        }   
     }
 }
 
 .guess-word {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
 }
 
 .guess-letter {
@@ -41,12 +45,6 @@
     background-color: lightgrey;
     text-transform: capitalize;
     
-    /*display: inline-block;
-     
-    
-    div {
-    
-    }*/
 }
 
 .guessed {
@@ -54,24 +52,37 @@
     background-color: darkslategrey;
 }
 
+.valign {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .modal{
+    border:1px solid red;
+    
   font-family: AllerDisplay;
   font-size: 40px;
   color: white; 
   background: transparent;
   border: none;
   text-align: center;
+  
+  width:33%;
+  height: 33%;
+  
+  /*
   height:300px;
   width:500px;
 
-  /* change position to fixed if you want to prevent the dialog from scrolling away, and center it */
   position:fixed;
   top:50%;
   left:50%;
   margin-left: -250px;
-  margin-top:-150px;
+  margin-top:-150px;*/
   
   button {
+      text-transform: capitalize;
       font-size: 30px;
       font-weight: bold;
       background:transparent;
@@ -85,7 +96,6 @@
       color:darken(gold, 5%);
       border-color: darken(gold, 5%);
   }
-  
 }
 
 .modal::backdrop {
