--- a/src/app/netguru-hangman.component.scss
+++ b/src/app/netguru-hangman.component.scss
@@ -1,17 +1,11 @@
 @font-face {
     font-family: AllerDisplay;
-    src: url('../assets/fonts/AllerDisplay.ttf');
+    src: url('assets/fonts/AllerDisplay.ttf');
 }
-
 @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity: 1;}
 }
-@keyframes fadeOut {
-    from {opacity: 1;}
-    to {opacity: 0;}
-}
-
 
 .main {
     animation-name: fadeIn;
@@ -20,7 +14,7 @@
     font-family: AllerDisplay;
     margin: 8px;
     
-    background:#F5F5F5 url('../assets/img/bg.png');
+    background:#F5F5F5 url('assets/img/bg.png');
     background-position: right bottom;
     background-repeat: no-repeat;
     
