--- a/src/main.scss
+++ b/src/main.scss
@@ -5,8 +5,12 @@ body {
     padding: 30px;
 }
 
-.valign {
-    display:flex;justify-content:center;align-items:center;width:100%;height:100%;
+.center-fix {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; 
 }
 
 #spinner {
